tests/type_errors/option_wrong_inner_type.nos
# expect_error: type mismatch
# Test: Option with wrong inner type

useInt(n: Int) = n * 2

extractInt(Some(x)) = x
extractInt(None) = 0

main() = {
    opt = Some("hello")  # String inside Some
    useInt(extractInt(opt))  # String passed to Int function
}
